--- a/post/templates/post/index.html
+++ b/post/templates/post/index.html
@@ -9,7 +9,7 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Publcar">
+        <input type="submit" value="Publicar">
     </form>
     <p>
     <p>
